# kong-hackaton-2023

./: README.md  docker-compose.yml
ecommerce/: Dockerfile  go.mod  main.go
kong-plugin-internationalization/: Dockerfile  README.md  docker-compose.yml  kong-plugin-internationalization-0.1.0-1.rockspec  kong.yml
kong-plugin-internationalization/.pongo/: pongo-setup.sh
kong-plugin-internationalization/kong/plugins/internationalization/: handler.lua  schema.lua
kong-plugin-internationalization/spec/internationalization/: 01-unit_spec.lua
kong-plugin-internationalization/spec/mtls-authentication/: 01-unit_spec.lua
testing/: README.md  client_simples.py  lua_simples.lua  server_threaded.py
translator/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
translator/src/cache/: redis.py  repository.py
translator/src/config/: env.py
translator/src/identifier/: identifier.py  repository.py
translator/src/socket/: server_threaded.py
translator/src/translator/: dl_translate.py  repository.py
