[tool.poetry]
name = "translator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dl-translate = "^0.3.0"
torch = ">=2.0.0, !=2.0.1"
redis = {extras = ["hiredis"], version = "^5.0.0"}
lingua-language-detector = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
